# QuantizedMultiplication

./: .gitignore  README.md  graph.py  log_helpers.py  multiplication_compound_test.py  multiplication_compound_test_not_near_zero.py  multiplication_compounding_all_simulations.py  multiplication_compounding_all_simulations_random.py  multiplication_compounding_all_simulations_same_set.py  multiplication_compounding_simulation.py  multiplication_map_generator.py  multiplication_map_loader.py  multiplication_test.py  pyproject.toml  sitecustomize.py  test_float.py
algorithms/: bilinear.py  nearest_neighbor.py
scripts/: run_simulation.py
src/quantization_playground/: __init__.py  batch_export.py  evaluation.py  export_examples.py  lut_matmul_eval.py  paths.py  plotting.py  simulation.py
src/quantization_playground/algorithms/: __init__.py  bilinear.py  nearest_neighbor.py
src/quantization_playground/maps/: __init__.py  generator.py  loader.py
tests/: test_float.py
trivial/: multiplication_compound_test_not_near_zero.py  multiplication_error_test.py  multiplication_test.py
