[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantization-playground"
version = "0.1.0"
description = "Lookup-table based quantization playground for toy multiplication experiments."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pillow",
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
